--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Add_Derivative.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/Dialog_Add_Derivative.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="SleepApneaDiagnoser.Dialog_Derivative"
+﻿<Window x:Class="SleepApneaDiagnoser.Dialog_Add_Derivative"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SleepApneaDiagnoser"
         mc:Ignorable="d"
-        Title="Add Derivative" Height="240.079" Width="300" ResizeMode="NoResize" ShowInTaskbar="False">
+        Title="Add Derivative" Height="240" Width="300" ResizeMode="NoResize" ShowInTaskbar="False">
     <Grid>
         <TextBlock TextWrapping="WrapWithOverflow" Height="34" VerticalAlignment="Top" Margin="10,10,10,0">
             Please select the two EEG signals you would like to subtract.
